# progeny

./: .gitignore  Cargo.toml  LICENSE  flake.nix  rustfmt.toml
codegen/: Cargo.toml
codegen/src/: box_or_ref.rs  formatting.rs  generator.rs  into_cow.rs  lib.rs  macros.rs  openapi_ext.rs  resolver.rs  type_def.rs  type_graph.rs  type_names.rs  type_ref.rs
codegen/src/type_model/: graph.rs  kinds.rs  mod.rs
examples/petstore/: Cargo.toml  build.rs
examples/petstore/spec/: README.md  openapi.json  openapi.yaml
macros/: Cargo.toml
macros/src/: lib.rs
nix/: formatter.nix  rust-nightly-tools.nix  shell.nix
src/: lib.rs
