[package]
name = "progeny-codegen"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
heck = "0.5.0"
openapiv3 = "2.2.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"

[lints]
workspace = true
