[package]
name = "progeny-codegen"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
convert_case = "0.8.0"
openapiv3 = "2.2.0"
percent-encoding = "2.3.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "2.0", default-features = false, features = ["extra-traits"] }
thiserror = "2.0"

[lints]
workspace = true

[dev-dependencies]
test-case = "3"
