[package]
name = "swagger-petstore"
version = "0.1.0"
homepage = "https://petstore3.swagger.io/"
edition = "2024"
publish = false

[dependencies]
# http = "1.3.1"
# ureq = "3.1.2"

[build-dependencies]
prettyplease = "0.2"
progeny-codegen.workspace = true
serde_json = "1.0"
syn = "2.0"

[lints]
workspace = true
